@@ -27,7 +27,6 @@ public class ChatRoom extends BaseTimeEntity {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id; // 채팅방 고유의 id
 
-    @Column(nullable = false)
     private String roomName;
 
     @OneToMany(mappedBy = "chatRoom", cascade = CascadeType.ALL)
@@ -44,17 +43,28 @@ public class ChatRoom extends BaseTimeEntity {
         }
     }
 
-    public void setChatUsers(ChatUser chatUsers){
-        this.chatUsers.add(chatUsers);
+    public void setChatUser(ChatUser chatUser){
+        this.chatUsers.add(chatUser);
+    }
+
+    public void deleteChatUser(ChatUser chatUser){
+        this.chatUsers.remove(chatUser);
+        System.out.println("나가면 한명만 남는데 왜 empty값이 들어가 이 자식아.");
+        System.out.println(this.chatUsers.size());
+    }
+
+    public void updateChatRoomName(String chatRoomName){
+        this.roomName = chatRoomName;
     }
 
     public ChatRoomResponse fromEntity (int unreadChat){ // 단일 조회 , 목록 조회
-        List<String> userNums = this.getChatUsers().stream().map(p->p.getUser().getUserNum()).collect(Collectors.toList());
-
+        List<ChatRoomUserResponse> userList = this.getChatUsers().stream().map(ChatUser::fromEntityForRoomList).toList();
+        System.out.println("empty값은 대체 뭐야");
+        System.out.println(userList.size());
         return ChatRoomResponse.builder()
                 .roomId(this.getId())
                 .roomName(this.getRoomName())
-                .userNums(userNums)
+                .users(userList)
                 .recentChat(this.getRecentChat()!=null ? this.getRecentChat():"")
                 .unreadChatNum(unreadChat)
                 .recentChatTime(this.getRecentChat()!= null ? this.getRecentChatTime().toString() : "")
